# llm_rag

./: Dockerfile  README.md  pyproject.toml  run_ollama.sh  start_ollama.sh  utils.py  wait_for_ollama.sh
chainmanager/: chainmanager.py
data/: synthetic_cv.csv
faiss_index_cv/: index.faiss  index.pkl
itps.faiss/: index.pkl
llm_rag/: conversational_history.py  main.py  search_cv_from_pdf.py
tests/: test.py
vector_store_cvs.faiss/: index.faiss  index.pkl
vectorialdb/: vectorialdb.py
vectorstoremanager/: vectorstoremanager.py
